--- a/style.css
+++ b/style.css
@@ -1,6 +1,48 @@
-body{
-    background-color: aqua;
-}
-h1{
-    background-clip: 80px;
-}
+body {
+    background-color: #F8E6CE;
+  }
+  .container {  display: grid;
+    grid-template-columns: 1.2fr;
+    grid-template-rows: 21.5% 1.9fr 0.4fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "Head"
+      "menu"
+      "botto";
+  }
+  
+  .Head { grid-area: 
+    h1{
+        
+    }}
+  
+  .botto { grid-area: botto; }
+  
+  .menu { grid-area: menu; }
+  
+  
+  html, body , .container {
+    height: 100%;
+    margin: 0;
+  }
+  
+  /* For presentation only, no need to copy the code below */
+  
+  .container * {
+    border: 1px solid red;
+    position: relative;
+  }
+  
+  .container *:after {
+    content:attr(class);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+  }
+  
