--- a/style.css
+++ b/style.css
@@ -1,22 +1,56 @@
-
+¨*{
+    box-sizing:border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
 body{
     background-color: #F8E6CE;
-    font-family: 'Times New Roman', Times, serif;
-    margin: 0;
-
 }
-
 .header{
-    background-color: #FDB3A4;
+    background-color: #fff;
     display: flex;
-    height: 75px;
-    justify-content:space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    height: 85px;
+    padding: 5px 10%;
+
 }
-.Logo{
-    display: flex;
+.header .logo{
+    cursor: pointer;
 }
-.Logo img{
-    height: 80px;
+.header .logo img{
+    height: 70px;
+    width:auto;
+    transition: all 0.3;
+}
+.header .logo img:hover{
+    transform: scale(1.2);
+}
+.header .nav-links{
+    list-style: none;
+}
+.header .nav-links li{
+    display: inline-block;
+    padding: 0 20px;
+}
+.header .nav-links li:hover{
+    transform: scale(1.1);
+}
+.header .nav-links a{
+    font-size: 700;
+    color: #FDB3A4;
+    text-decoration: none;
+}
+.header .nav-links li a:hover{
+    color: honeydew;
+}
+.header .btn button{
+    font-weight: 700;
+    color: #F8E6CE;
+    padding: 9px 25px;
+    background:lightcoral;
+    cursor: pointer;
+    transition: all o.3 ease 0s;
 }
